<resources>
    <string name="app_name" translatable="false">PdfPrime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="titleNewDoc">New document</string>
    <string name="titleButtonNewDocDis">Device</string>
    <string name="titleButtonNewDocCam">Camera</string>
    <string name="titleButtonNewDocTxt">Text editor</string>
    <string name="titleButtonSaveDoc">Save</string>
    <string name="titleButtonDiscardDoc">Dismiss</string>

    <string name="titleButtonEditDoc">Edit</string>
    <string name="titleButtonShareDoc">Share</string>
    <string name="titleButtonDeleteDoc">Delete</string>
    <string name="titleButtonOpenDoc">Open</string>

    <string name="txtWriteSomething">Please, write a valid name</string>
    <string name="txtFileAlreadyExists">There is already a file with this name</string>

    <string name="txtPreviewRendering">Rendering %s of %s</string>
    <string name="txtPreviewRenderingDocument">%s,rendering %s of %s</string>
    <string name="txtPreviewCreating">Extracting pages %s of %s</string>
    <string name="txtCreatingDocument">Creating new document…</string>

    <!--Texto de botones de navegacion-->
    <string name="titleButtonHome">Homepage</string>
    <string name="titleButtonCamara">Camera</string>
    <string name="titleButtonRateUs">Rate us</string>
    <string name="titleButtonReachUs">"Reach us/Acknowledgements "</string>
    <string name="titleButtonThanks">Acknowledgements</string>
    <string name="titleButtonAboutUs">About us</string>
    <string name="titleButtonSettings">Settings</string>
    <string name="titlePageSize">Page size</string>
    <string name="A0" translatable="false">A0</string>
    <string name="A1" translatable="false">A1</string>
    <string name="A2" translatable="false">A2</string>
    <string name="A3" translatable="false">A3</string>
    <string name="A4" translatable="false">A4</string>
    <string name="A5" translatable="false">A5</string>
    <string name="A6" translatable="false">A6</string>
    <string name="letterSize">Letter</string>
    <string name="legalSize">Legal</string>
    <string name="pageSize" translatable="false">%s x %s</string>
    <string name="headerSpinnerPageSize">Select a page size</string>
    <string name="titleChooseNameDoc">Write a name for this document</string>
    <string name="titleImagePageQuality">Quality of pictures</string>
    <string name="titleReachus">About us</string>
    <string name="txtAboutMe">This complete application has been developed only by me, Ivan Monreal. You can share your experience using this app sending us a mail to the next mail:</string>
    <string name="txtEmail" translatable="false"><u>ivan.monreal@hotmail.com</u></string>
    <string name="txtThanks">I thank to all developers who had invested their time doing incredible job and making open source projects, without them I would never be possible to finish this app:</string>
    <string name="txtSubjectEmail">Feedback pdfprime</string>
    <string name="txtAskFingerPrint">Request fingerprint on app starting</string>
    <string name="titleVerifyId">Identify yourself</string>
    <string name="txtVerifyId">Place your finger on the sensor</string>
    <string name="titleButtonNewDocGal">Gallery</string>
    <string name="txtPermissionRequired">This permission is required</string>
    <string name="titleSettingsPage">Page</string>
    <string name="titleSettingsDoc">Document</string>
    <string name="titleSettingsSec">Security</string>
    <string name="lorem_ipsum" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="titleCheckboxNotShowAgain">Not show again</string>
    <string name="txtAccept">Accept</string>
    <string name="txtNotEditablePage">Only pictures are editable for now.</string>
    <string name="txtBackAgainToExit">Press again to exit</string>
    <string name="titleSettingsLanguage">Language</string>
    <string name="titleAckFlaticon" translatable="false">Flaticon</string>
    <string name="urlAckFlaticon" translatable="false">https://www.flaticon.es/</string>
    <string name="txtAckFlaticon">Flag icons created by Freepik</string>
    <string name="titleAckUcrop" translatable="false">Ucrop</string>
    <string name="txtAckUcrop">Library used to edit pictures</string>
    <string name="urlAckUcrop" translatable="false">https://github.com/Yalantis/uCrop</string>
    <string name="titleAckSpinKit" translatable="false">Android-SpinKit</string>
    <string name="txtAckSpinKit">Library used to create cool loading animations</string>
    <string name="urlAckSpinKit" translatable="false">https://github.com/ybq/Android-SpinKit</string>
    <string name="titleAckPdfViewer" translatable="false">Android PdfViewer</string>
    <string name="txtAckPdfViewer">Library used to view pdf files</string>
    <string name="urlAckPdfViewer" translatable="false">https://github.com/barteksc/AndroidPdfViewer</string>
    <string name="titleAckPdfBox" translatable="false">PdfBox-Android</string>
    <string name="txtAckPdfBox">Library used to render, create and merge pdf files</string>
    <string name="urlAckPdfBox" translatable="false">https://github.com/TomRoush/PdfBox-Android</string>
    <string name="titleAckCanva" translatable="false">Canva</string>
    <string name="txtAckCanva">Online app used for logo creation</string>
    <string name="urlAckCanva" translatable="false">https://www.canva.com</string>
    <string name="titleShare">Share a document</string>

</resources>