<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/documentFrag"
        android:title="@string/titleButtonHome"
        android:icon="@drawable/ic_home_24"/>

    <item
        android:id="@+id/creatorCamFrag"
        android:title="@string/titleButtonCamara"
        android:icon="@drawable/ic_camera_24"/>

    <item
        android:id="@+id/btnRateUs"
        android:title="@string/titleButtonRateUs"
        android:icon="@drawable/ic_star_24"/>

    <item
        android:id="@+id/btnReachUs"
        android:title="@string/titleButtonReachUs"
        android:icon="@drawable/ic_email_24"/>

    <item
        android:id="@+id/btnThanks"
        android:title="@string/titleButtonThanks"
        android:icon="@drawable/ic_emoji_people_24"/>

    <item
        android:id="@+id/btnAboutUs"
        android:title="@string/titleButtonAboutUs"
        android:icon="@drawable/ic_person_24"/>

    <item
        android:id="@+id/settingsFrag"
        android:title="@string/titleButtonSettings"
        android:icon="@drawable/ic_settings_24"/>
</menu>